# documentation-update

./: .env  .env.backup  .gitignore  ENHANCED_DOCX_WORKFLOW_INTEGRATION.md  PROVIDER_SYSTEM.md  README.md  check_headings_with_content.py  debug_document_parsing.py  existing_repo_workflow.py  final_heading_update.py  pyproject.toml  setup_models.py  setup_ollama.py  test_enhanced_workflow_integration.py  test_github_token.py  test_github_token_simple.py  test_heading_parser.py  test_heading_relevance.py  test_heading_updates.py  test_paragraph_duplication.py  test_paragraph_duplication_output.docx  test_single_heading_update.py
core/: arango_client.py  gitlab_client.py
debug_json/: cleaned_instruction_response.json  cleaned_instruction_response.txt  raw_instruction_response.txt
other/: document_editor (fixed).py  double_para.py  table_editor.py
server/: main.py
services/: audit_service.py  change_event_service.py  config_service.py  document_update_service.py  impact_assessment_service.py  indexing_service.py  llm_service.py  rag_service.py
test_output/: docs_calculator_documentation.docx_20251024_112612.docx  docs_calculator_documentation.docx_20251024_175448.docx  ~$cs_Click_Professional_Documentation.docx_20251016_145640.docx  ~$cs_calculator_documentation.docx_20251024_100142.docx
test_step_by_step/: extract_tables.py  step1_docx_to_md.py  step3_improved.py  step4_fresh.py  step4_line_by_line.py  step5_formatting_extraction.py  step5_llm_formatting_fix.py  step5b_targeted_formatting_fix.py
utils/: config.py  csv_handler.py  document_handlers.py  logger.py  (+10 more)
(+35 files in other folders)
